
@startuml
skinparam classAttributeIconSize 0

class FindPortsUI{
}

class PortController{
+ findClosestPortToShip(String callSign, Date year, LocalTime hours)
}

class Ship{
+ Ship()
+ getCallSign()
}

class ShipDynamicFields{
+ checkLastPositionUpgrade(Date year, LocalTime hours, List<ShipDynamicFields> ships)
}

class TwoDTree {
+ findNearestNeighbour(double x, double y)
+ findNearestNeighbour(finalShip.getLat(), finalShip.getLon())
}

class Node {
+ getInfo()
+ setObject(Node node)
}

class Port {
+ getLat()
+ getLon()
}




PortController <.up. FindPortsUI
PortController "1" --> "1..*" Ship : uses
PortController "1" --> "1..*" ShipDynamicFields : uses
PortController "1" --> "1" TwoDTree : uses
TwoDTree "1" --> "1..*" Port : uses
TwoDTree "1" --> "1..*" Node : uses

@enduml

